CSS: Move Logout down on narrow screens (fix #938)

--- a/adminer/static/default.css
+++ b/adminer/static/default.css
@@ -100,7 +100,7 @@ input.wayoff { left: -1000px; position: absolute; }
 
 @media all and (max-width: 880px) {
 	.pages { left: auto; }
-	.logout { position: static; padding: 0 1em 1em; }
+	.logout { position: static; padding: 1em; }
 	#menu { position: static; width: auto; }
 	#content { margin-left: 10px; }
 	#lang { position: static; }
